# JNISeries

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/zqf/jniseries/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/: bridge.c  com_zqf_jniseries_JNIImpl.h
app/src/main/java/com/zqf/jniseries/: GifActivity.java  JNIImpl.java  MainActivity.kt  User.java
app/src/main/java/com/zqf/jniseries/gif/: GifActivity.java  GifHandler.java
app/src/main/res/layout/: activity_main.xml  gif_layout.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/zqf/jniseries/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
